force-app/main/default/objects/Contact/fields/cer_Finance_Contact__c.field-meta.xml
<CustomField>
    <fullName>cer_Finance_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this field if this contact is eligible to receive a PDF invoice.</description>
    <inlineHelpText>Check this field if this contact is eligible to receive a PDF invoice.</inlineHelpText>
    <label>Finance Contact</label>
    <type>Checkbox</type>
</CustomField>