force-app/main/default/objects/Contact/fields/CT_Generic_Resource__c.field-meta.xml
<CustomField>
    <fullName>CT_Generic_Resource__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indicates if this is a Generic resource</inlineHelpText>
    <label>Generic Resource</label>
    <type>Checkbox</type>
</CustomField>