force-app/main/default/objects/Contact/fields/CT_Has_Own_Transport__c.field-meta.xml
<CustomField>
    <fullName>CT_Has_Own_Transport__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Own Transport</label>
    <type>Checkbox</type>
</CustomField>