force-app/main/default/objects/Contact/fields/CT_Remote__c.field-meta.xml
<CustomField>
    <fullName>CT_Remote__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Remote</label>
    <type>Checkbox</type>
</CustomField>