force-app/main/default/objects/Contact/fields/Last_Advocacy_Survey_Send_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Advocacy_Survey_Send_Date__c</fullName>
    <label>Last Advocacy Survey Send Date</label>
    <type>Date</type>
</CustomField>