force-app/main/default/objects/Contact/fields/Last_R_D_Survey_Send_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_R_D_Survey_Send_Date__c</fullName>
    <label>Last R&amp;D Survey Send Date</label>
    <type>Date</type>
</CustomField>