force-app/main/default/objects/Contact/fields/Preferences_Updated__c.field-meta.xml
<CustomField>
    <fullName>Preferences_Updated__c</fullName>
    <label>Preferences Updated</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>