force-app/main/default/objects/Contact/fields/Preferences_Updated_On__c.field-meta.xml
<CustomField>
    <fullName>Preferences_Updated_On__c</fullName>
    <label>Preferences Updated On</label>
    <type>Date</type>
</CustomField>