force-app/main/default/objects/Contact/fields/Unsubscribed__c.field-meta.xml
<CustomField>
    <fullName>Unsubscribed__c</fullName>
    <label>Unsubscribed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>