force-app/main/default/objects/Contact/listViews/Survey_Test.listView-meta.xml
<ListView>
    <fullName>Survey_Test</fullName>
    <booleanFilter>1 OR 2</booleanFilter>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>FULL_NAME</field>
        <operation>equals</operation>
        <value>James Lunn</value>
    </filters>
    <filters>
        <field>FULL_NAME</field>
        <operation>equals</operation>
        <value>JJ Esguerra</value>
    </filters>
    <label>Survey Test</label>
</ListView>